--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,12 @@
 
     "outDir": "./dist",
     "declaration": true,
+    "allowJs": false,
+    "declarationMap": true,
 
-    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    // "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 
-    "module": "commonjs",                                /* Specify what module code is generated. */
+    // "module": "commonjs",                                /* Specify what module code is generated. */
 
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
