--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dc-error-reporting-js-sdk",
   "version": "1.0.0",
   "description": "SDK para integrar o sistema de alerta de erros com PHP",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
